# Start-Page-Generator

./: .gitignore  README.md  Start-Page-Generator.cabal  generator.py  index.html  links.txt  start.html  style.css  template.html  variables.css
.github/workflows/: deploy.yml  run-tests.yml
app/: Main.hs
lib/: FavoritesParser.hs  SiteMapper.hs  SiteTypes.hs  TemplateEngine.hs
test/: FavoritesParserSpec.hs  ParsedSites.hs  TemplateEngineSpec.hs  empty-input.txt  sample-input.txt
